Fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
     place-items: center;
     max-height: 75vh;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 @keyframes poke-card-ani {
     0%{
